[project]
name = "portfolio"
version = "0.1.0"
description = "Portfolio Management Service"
authors = [
    {name = "Diego Gasch",email = "eldie1984@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.1,!=0.136.3)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "yfinance (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
